Null cursor fix for Chrome
See
http://icelab.com.au/articles/invisible-cursors-in-google-chrome-with-css/

--- a/source/css/maya.css
+++ b/source/css/maya.css
@@ -14,6 +14,8 @@
   url(../../assets/fonts/SerifaStd-Roman.otf);
 }
 
+* { cursor: url(../../assets/images/cursor.png), none !important }
+
 body {
   background: url(../../assets/images/theme/bg.jpg) repeat;
   color: rgb(255,255,255);
